# Allogen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: CompileAllogenInterface.cmake  FindMaven.cmake
Compiler/: pom.xml
Compiler/src/main/generated-sources/: IDL.tokens
Documentation/: compiler.rst  idl.rst
Example/: CMakeLists.txt
Example/Bridge/: CMakeLists.txt
Example/Bridge/CSharp/: Allogen.Example.Bridge.CSharp.sln
Example/Bridge/CSharp/Allogen.Example/: Allogen.Example.csproj  Program.cs
Example/Bridge/CSharp/Allogen/Example/: AnotherClass.cs  DataTypes.cs  DummyClass.cs  ExampleClass.cs
Example/Bridge/CSharp/Allogen/Example/Inheritance/: BaseClass.cs  SubClass1.cs  SubClass2.cs
Example/Bridge/IDL/: AnotherClass.i  DataTypes.i  Example.i  Inheritance.i
Example/Bridge/Java/: allogen_example_ExampleClass.h
Example/Bridge/Java/allogen/example/: AnotherClass.java  AsyncTaskCallback.java  AsyncTaskCallback2.java  CreateAnotherAsyncCallback.java  DataTypes.java  DummyClass.java  ExampleClass.java  PrintAnotherAsyncCallback.java
Example/Bridge/Java/allogen/example/inheritance/: BaseClass.java  SubClass1.java  SubClass2.java
Example/Bridge/ObjectiveC/Allogen/: AAnotherClass.h  ABaseClass.h  ADataTypes.h  ADummyClass.h  AExampleClass.h  ASubClass1.h  ASubClass2.h
Example/Bridge/ObjectiveC/Allogen/Example/: AAnotherClass.h  AExampleClass.h
Example/Bridge/Source/CSharp/Allogen/Example/Bridge/: AnotherClass.cpp  AnotherClass.hpp  DataTypes.cpp  DataTypes.hpp  DummyClass.cpp  DummyClass.hpp  ExampleClass.cpp  ExampleClass.hpp
Example/Bridge/Source/CSharp/Allogen/Example/Bridge/Inheritance/: BaseClass.cpp  BaseClass.hpp  SubClass1.cpp  SubClass1.hpp  SubClass2.cpp  SubClass2.hpp
Example/Bridge/Source/Embind/Allogen/Example/Bridge/: AnotherClass+Embind.cpp  ExampleClass+Embind.cpp
Example/Bridge/Source/Embind/Allogen/Example/Bridge/Inheritance/: BaseClass+Embind.cpp  SubClass1+Embind.cpp  SubClass2+Embind.cpp
Example/Bridge/Source/JNI/: ExampleClass.cpp  ExampleClass.hpp
Example/Bridge/Source/JNI/Allogen/Example/: AnotherClass.cpp  AnotherClass.hpp  ExampleClass.cpp  ExampleClass.hpp
Example/Bridge/Source/JNI/Allogen/Example/Bridge/: AnotherClass.cpp  AnotherClass.hpp  DataTypes.cpp  DataTypes.hpp  DummyClass.cpp  DummyClass.hpp  ExampleClass.cpp  ExampleClass.hpp
Example/Bridge/Source/JNI/Allogen/Example/Bridge/Inheritance/: BaseClass.cpp  BaseClass.hpp  SubClass1.cpp  SubClass1.hpp  SubClass2.cpp  SubClass2.hpp
Example/Bridge/Source/ObjectiveC/Allogen/Example/: AEAnotherClass+Private.h  AEAnotherClass.h  AEAnotherClass.mm  AEExampleClass+Private.h  AEExampleClass.h  AEExampleClass.mm
Example/Bridge/Source/ObjectiveC/Allogen/Example/Bridge/: AnotherClass+Private.h  AnotherClass.mm  DataTypes+Private.h  DataTypes.mm  DummyClass+Private.h  DummyClass.mm  ExampleClass+Private.h  ExampleClass.mm
Example/Bridge/Source/ObjectiveC/Allogen/Example/Bridge/Inheritance/: BaseClass+Private.h  BaseClass.mm  SubClass1+Private.h  SubClass1.mm  SubClass2+Private.h  SubClass2.mm
Example/Bridge/Test/Java/src/: Main.java
Example/Bridge/Test/JavaScript/: test.js
Example/Bridge/Test/ObjectiveC/: main.m
Example/Java/: .gitignore  Bridge
Example/Source/Allogen/Example/: AnotherClass.cpp  AnotherClass.hpp  DataTypes.cpp  DataTypes.hpp  ExampleClass.cpp  ExampleClass.hpp
Source/Allogen/: CSharp.hpp  JNI.h  JNI.hpp  ObjectiveC.h  ObjectiveC.hpp
Source/Allogen/CSharp/: BridgedClass.hpp  BridgedConstructor.hpp  BridgedMethod.hpp  Converter.hpp
Source/Allogen/CSharp/Converter/: DateTime.hpp  Function.hpp  IntegralTypes.hpp  Map.hpp  Optional.hpp  Vector.hpp
Source/Allogen/JNI/: BridgedClass.hpp  BridgedConstructor.hpp  BridgedDestructor.hpp  BridgedMethod.hpp  CoffeeCatch.hpp  Converter.h  Converter.hpp  References.hpp  WrappedMethod.h  WrappedMethod.hpp
Source/Allogen/JNI/Converter/: Buffer.hpp  DateTime.hpp  Function.hpp  IntegralTypes.h  IntegralTypes.hpp  Map.hpp  Optional.hpp  Vector.hpp
Source/Allogen/ObjectiveC/: BridgedClass.hpp  BridgedConstructor.hpp  BridgedMethod.hpp  Converter.hpp
Source/Allogen/ObjectiveC/Converter/: Buffer.hpp  DateTime.hpp  Function.hpp  IntegralTypes.hpp  Map.hpp  Optional.hpp  Vector.hpp
allogen/: __init__.py  setup.py
allogen/bridge/: Allogen.py  Constructs.py  Context.py  Parser.py  __init__.py
allogen/bridge/backend/: Backend.py  BridgeBackend.py  Constants.py  TargetBackend.py  __init__.py
allogen/bridge/backend/csharp/: Generator.py
allogen/bridge/backend/java/: JavaBackend.py  JavaBridgeBackend.py  JavaTargetBackend.py
allogen/bridge/backend/objc/: ObjectiveCBackend.py  ObjectiveCBridgeBackend.py  ObjectiveCTargetBackend.py
allogen/bridge/frontend/: Compiler.py  CompilerContext.py  CompilerPass.py  CompilerType.py  __init__.py
allogen/bridge/frontend/passes/: BackendBridgeCodegenPass.py  BackendTargetCodegenPass.py  BackendVisitorPass.py  CodegenConstructsCreationPass.py  IDLParsingPass.py  ImportingPass.py  TypenameMappingPass.py  __init__.py
allogen/bridge/frontend/types/: Function.py  Primitives.py  SharedPtr.py
allogen/bridge/idl/: Objects.py  Parser.py  __init__.py
allogen/bridge/languages/: TargetLanguage.py
allogen/bridge/sample/: FileProvider.i  sample.i
allogen/bridge/type_helpers/: TypeHelper.py  UserDefinedType.py
allogen/codegen/: Constructors.py  Constructs.py  FileSourceCodeWriter.py  FileWriter.py  Language.py  LanguageNamingConvention.py  LanguageSourceGenerator.py  Lexer.py  SourceCodeWriter.py  StreamSourceCodeWriter.py  StreamWriter.py  StringSourceCodeWriter.py  __init__.py
allogen/codegen/languages/: CSharpLanguage.py  CppCodegen.py  CppLanguage.py  JavaCodegen.py  JavaLanguage.py  ObjectiveCLanguage.py  __init__.py
allogen/codegen/sample/: __init__.py  class_decl.py  cpp_codegen.py  csharp_codegen.py  java_codegen.py  objc_codegen.py
codegen/: CodegenStream.py  FileWriter.py  Language.py  StreamWriter.py  __init__.py  constructors.py
codegen/languages/: CppCodegen.py  JavaCodegen.py  StringWriter.py  __init__.py
(+101 files in other folders)
